tests/e2e/semantics/nested_types6.error
Error: syntax error in story at line 2, column 9

2|      return [0]
               ^

E0102: `int[]` can't be implicitly converted to expected return type `int[][]`.
