tests/e2e/semantics/nested_types6.story
function foo returns int[][]
	return [0]

a = foo()
